# GaussHermite

./: CMakeLists.txt  LICENSE  README.md  gauss_hermite.cpp  test_newton.cpp  test_tricomi.cpp
